# what-todo

./: .editorconfig  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: build.yaml
tests/: test_what_todo.py
what_todo/: application.py  config.py
what_todo/static/css/: style.css
what_todo/templates/: home.j2  layout.j2
what_todo/views/: admin.py  home.py  user.py
