[tool.poetry]
name = "what-todo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = { extras = ["toml"], version = "^22.6.0" }
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pycln]
all = true

[tool.bandit]
skips = ["B101"]
